--- a/.gitlab/binary_build/cws_instrumentation.yml
+++ b/.gitlab/binary_build/cws_instrumentation.yml
@@ -12,7 +12,7 @@ cws_instrumentation-build_amd64:
   rules:
     !reference [.on_tag_or_a7]
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs: ["go_mod_tidy_check", "go_deps"]
   variables:
     ARCH: amd64
@@ -24,7 +24,7 @@ cws_instrumentation-build_arm64:
   rules:
     !reference [.on_tag_or_a7]
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_arm64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   needs: ["go_mod_tidy_check", "go_deps"]
   variables:
     ARCH: arm64
