--- a/.gitlab/binary_build/fakeintake.yml
+++ b/.gitlab/binary_build/fakeintake.yml
@@ -6,7 +6,7 @@ build_fakeintake:
     - !reference [.on_fakeintake_changes]
   needs: []
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   script:
     - inv fakeintake.build
 
