--- a/.gitlab/functional_test/regression_detector.yml
+++ b/.gitlab/functional_test/regression_detector.yml
@@ -5,7 +5,7 @@ single-machine-performance-regression_detector:
     - !reference [.except_main_or_release_branch]
     - when: on_success
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/docker_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs:
     - job: single_machine_performance-amd64-a7
       artifacts: false
@@ -258,7 +258,7 @@ single-machine-performance-regression_detector-pr-comment:
   image:
     name: "486234852809.dkr.ecr.us-east-1.amazonaws.com/pr-commenter:3"
     entrypoint: [""] # disable entrypoint script for the pr-commenter image
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs:
     - job: single-machine-performance-regression_detector
   artifacts:
