--- a/.gitlab/packaging/rpm.yml
+++ b/.gitlab/packaging/rpm.yml
@@ -30,14 +30,14 @@
 
 .package_rpm_x86:
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/rpm_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   variables:
     DD_PKG_ARCH: x86_64
     PACKAGE_ARCH: amd64
 
 .package_rpm_arm64:
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/rpm_arm64$DATADOG_AGENT_ARMBUILDIMAGES_SUFFIX:$DATADOG_AGENT_ARMBUILDIMAGES
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   variables:
     PACKAGE_ARCH: arm64
     DD_PKG_ARCH: arm64
@@ -60,7 +60,7 @@
 
 agent_rpm-x64-a7:
   extends: [.package_rpm_common, .package_rpm_agent_7, .package_rpm_x86]
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs: ["datadog-agent-7-x64"]
   variables:
     DD_PROJECT: agent
@@ -94,7 +94,7 @@ installer_rpm-amd64:
 
 agent_rpm-x64-a7-fips:
   extends: [.package_rpm_common, .package_rpm_agent_7, .package_rpm_x86]
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs: ["datadog-agent-7-x64-fips"]
   variables:
     OMNIBUS_EXTRA_ARGS: "--flavor fips"
@@ -182,7 +182,7 @@ iot_agent_rpm-armhf:
   extends: .package_iot_rpm_common
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/rpm_armhf$DATADOG_AGENT_ARMBUILDIMAGES_SUFFIX:$DATADOG_AGENT_ARMBUILDIMAGES
   # Run with platform:arm64 since no platform:armhf exists and arm64 should be backwards compatible
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   needs: ["iot-agent-armhf"]
   variables:
     PACKAGE_ARCH: armhf
