--- a/.gitlab/trigger_release/trigger_release.yml
+++ b/.gitlab/trigger_release/trigger_release.yml
@@ -5,7 +5,7 @@
 .agent_release_management_trigger:
   stage: trigger_release
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   # We don't directly depend/need the package deploy jobs, because
   # that would make us deploy even when there are e2e tests failures etc
   # We only want to allow automatically triggering agent-release-manangement
@@ -69,7 +69,7 @@ generate_windows_gitlab_runner_bump_pr:
   stage: trigger_release
   extends: .slack-notifier-base
   needs: ["trigger_auto_staging_release"]
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules:
     - if: $DDR_WORKFLOW_ID != null
       when: never
@@ -89,7 +89,7 @@ generate_windows_gitlab_runner_bump_pr_manual:
   stage: trigger_release
   extends: .slack-notifier-base
   needs: ["trigger_auto_staging_release"]
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules:
     - if: $DDR_WORKFLOW_ID != null
       when: never
