--- a/.gitlab/.pre/create_release_qa_cards.yml
+++ b/.gitlab/.pre/create_release_qa_cards.yml
@@ -2,7 +2,7 @@
 create_release_qa_cards:
   stage: .pre
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules:
     - !reference [.on_deploy_rc]
   script:
@@ -10,7 +10,7 @@ create_release_qa_cards:
     - ATLASSIAN_PASSWORD=$($CI_PROJECT_DIR/tools/ci/fetch_secret.sh $ATLASSIAN_WRITE token) || exit $?; export ATLASSIAN_PASSWORD
     - ATLASSIAN_USERNAME=$($CI_PROJECT_DIR/tools/ci/fetch_secret.sh $ATLASSIAN_WRITE user) || exit $?; export ATLASSIAN_USERNAME
     # Python 3.12 changes default behavior how packages are installed.
-    # In particular, --break-system-packages command line option is 
+    # In particular, --break-system-packages command line option is
     # required to use the old behavior or use a virtual env. https://github.com/actions/runner-images/issues/8615
     - pip install ddqa --break-system-packages
     - inv release.create-qa-cards -t ${CI_COMMIT_REF_NAME}
