--- a/.gitlab/.pre/gitlab_configuration.yml
+++ b/.gitlab/.pre/gitlab_configuration.yml
@@ -1,7 +1,7 @@
 test_gitlab_configuration:
   stage: .pre
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules:
     - !reference [.except_mergequeue]
     - !reference [.on_gitlab_changes]
@@ -15,7 +15,7 @@ test_gitlab_configuration:
 test_gitlab_compare_to:
   stage: .pre
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules:
     - !reference [.except_mergequeue]
     - !reference [.on_gitlab_changes]
@@ -33,7 +33,7 @@ compute_gitlab_ci_config:
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_arm64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
   stage: .pre
   needs: []
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   before_script:
     # Get main history
     - git fetch origin main
@@ -52,7 +52,7 @@ compute_gitlab_ci_config:
 lint_gitlab_ci:
   stage: .pre
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs: [compute_gitlab_ci_config]
   script:
     - status=0
@@ -67,7 +67,7 @@ lint_gitlab_ci:
 lint_gitlab_ci_jobs_codeowners:
   stage: .pre
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_arm64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   needs: []
   script:
     - inv -e linter.gitlab-ci-jobs-codeowners --all-files
