--- a/.gitlab/binary_build/cluster_agent.yml
+++ b/.gitlab/binary_build/cluster_agent.yml
@@ -18,7 +18,7 @@ cluster_agent-build_amd64:
   rules:
     !reference [.on_tag_or_a7]
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs: ["go_mod_tidy_check", "go_deps"]
   variables:
     ARCH: amd64
@@ -30,7 +30,7 @@ cluster_agent-build_arm64:
   rules:
     !reference [.on_tag_or_a7]
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_arm64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   needs: ["go_mod_tidy_check", "go_deps"]
   variables:
     ARCH: arm64
