--- a/.gitlab/binary_build/linux.yml
+++ b/.gitlab/binary_build/linux.yml
@@ -2,7 +2,7 @@
 build_dogstatsd_static-binary_x64:
   stage: binary_build
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs: ["lint_linux-x64", "go_deps"]
   variables:
     ARCH: amd64
@@ -19,7 +19,7 @@ build_dogstatsd_static-binary_arm64:
     - !reference [.except_mergequeue]
     - when: on_success
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_arm64$DATADOG_AGENT_ARMBUILDIMAGES_SUFFIX:$DATADOG_AGENT_ARMBUILDIMAGES
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   needs: ["lint_linux-arm64", "go_deps"]
   variables:
     ARCH: arm64
@@ -36,7 +36,7 @@ build_dogstatsd-binary_x64:
     - !reference [.except_mergequeue]
     - when: on_success
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs: ["lint_linux-x64", "go_deps"]
   before_script:
     - !reference [.retrieve_linux_go_deps]
@@ -51,7 +51,7 @@ build_dogstatsd-binary_arm64:
     - when: on_success
   stage: binary_build
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_arm64$DATADOG_AGENT_ARMBUILDIMAGES_SUFFIX:$DATADOG_AGENT_ARMBUILDIMAGES
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   needs: ["lint_linux-arm64", "go_deps"]
   variables:
     ARCH: arm64
@@ -69,7 +69,7 @@ build_iot_agent-binary_x64:
     - !reference [.except_mergequeue]
     - when: on_success
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs: ["lint_linux-x64", "go_deps"]
   variables:
     KUBERNETES_CPU_REQUEST: 4
@@ -84,7 +84,7 @@ build_iot_agent-binary_arm64:
   rules: !reference [.on_all_builds]
   stage: binary_build
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_arm64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   needs: ["lint_linux-arm64", "go_deps"]
   variables:
     ARCH: arm64
