--- a/.gitlab/binary_build/system_probe.yml
+++ b/.gitlab/binary_build/system_probe.yml
@@ -27,7 +27,7 @@
 build_system-probe-x64:
   stage: binary_build
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/system-probe_x64$DATADOG_AGENT_SYSPROBE_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_SYSPROBE_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs: ["go_deps"]
   extends: .system-probe_build_common
   variables:
@@ -37,7 +37,7 @@ build_system-probe-arm64:
   stage: binary_build
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/system-probe_arm64$DATADOG_AGENT_SYSPROBE_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_SYSPROBE_BUILDIMAGES
   needs: ["go_deps"]
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   extends: .system-probe_build_common
   variables:
     ARCH: arm64
