--- a/.gitlab/check_deploy/check_deploy.yml
+++ b/.gitlab/check_deploy/check_deploy.yml
@@ -11,7 +11,7 @@ check_already_deployed_version_7:
   rules: !reference [.on_deploy]
   stage: check_deploy
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/gitlab_agent_deploy$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   dependencies: ["agent_deb-x64-a7", "agent_deb-arm64-a7"]
   before_script:
     - ls $OMNIBUS_PACKAGE_DIR
