--- a/.gitlab/check_merge/do_not_merge.yml
+++ b/.gitlab/check_merge/do_not_merge.yml
@@ -1,7 +1,7 @@
 do-not-merge:
   stage: check_merge
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules: # this should only run on dev branches
   - if: $CI_PIPELINE_SOURCE =~ /^schedule.*$/
     when: never
