--- a/.gitlab/common/skip_ci_check.yml
+++ b/.gitlab/common/skip_ci_check.yml
@@ -4,7 +4,7 @@ skip-ci-check:
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
   needs: []
   stage: setup
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules:
     - !reference [.on_mergequeue]
   script:
