--- a/.gitlab/deploy_packages/cluster_agent_cloudfoundry.yml
+++ b/.gitlab/deploy_packages/cluster_agent_cloudfoundry.yml
@@ -4,7 +4,7 @@ deploy_cluster_agent_cloudfoundry:
     !reference [.on_deploy]
   stage: deploy_packages
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/gitlab_agent_deploy$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs: ["cluster_agent_cloudfoundry-build_amd64"]
   before_script:
     - ls $OMNIBUS_PACKAGE_DIR
