--- a/.gitlab/e2e_install_packages/installer.yml
+++ b/.gitlab/e2e_install_packages/installer.yml
@@ -1,7 +1,7 @@
 qa_installer_script_main:
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/gitlab_agent_deploy$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
   stage: e2e_install_packages
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules:
     - !reference [.only_main] # Disable non-main branch. Must be first.
     - !reference [.on_installer_or_e2e_changes]
