--- a/.gitlab/kernel_matrix_testing/system_probe.yml
+++ b/.gitlab/kernel_matrix_testing/system_probe.yml
@@ -23,7 +23,7 @@ upload_dependencies_sysprobe_arm64:
 .pull_test_dockers:
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/docker_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
   needs: []
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules: !reference [.on_system_probe_or_e2e_changes_or_manual]
   stage: kernel_matrix_testing_prepare
   script:
@@ -58,7 +58,7 @@ pull_test_dockers_arm64:
 .upload_minimized_btfs:
   stage: kernel_matrix_testing_prepare
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/system-probe_x64$DATADOG_AGENT_SYSPROBE_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_SYSPROBE_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   script:
     # Build dependencies directory
     - mkdir -p $DEPENDENCIES
@@ -175,7 +175,7 @@ upload_sysprobe_tests_x64:
     - .upload_sysprobe_tests
   needs: ["go_deps", "prepare_sysprobe_ebpf_functional_tests_x64", "tests_ebpf_x64"]
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/system-probe_x64$DATADOG_AGENT_SYSPROBE_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_SYSPROBE_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   variables:
     ARCH: x86_64
     INSTANCE_TYPE: m5d.metal
@@ -185,7 +185,7 @@ upload_sysprobe_tests_arm64:
     - .upload_sysprobe_tests
   needs: ["go_deps", "prepare_sysprobe_ebpf_functional_tests_arm64", "tests_ebpf_arm64"]
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/system-probe_arm64$DATADOG_AGENT_SYSPROBE_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_SYSPROBE_BUILDIMAGES
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   variables:
     ARCH: arm64
     INSTANCE_TYPE: m6gd.metal
@@ -202,7 +202,7 @@ kmt_run_sysprobe_tests_x64:
   extends:
     - .kmt_run_sysprobe_tests
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/system-probe_x64$DATADOG_AGENT_SYSPROBE_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_SYSPROBE_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   needs:
     - kmt_setup_env_sysprobe_x64
     - upload_dependencies_sysprobe_x64
@@ -240,7 +240,7 @@ kmt_run_sysprobe_tests_arm64:
   extends:
     - .kmt_run_sysprobe_tests
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/system-probe_arm64$DATADOG_AGENT_SYSPROBE_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_SYSPROBE_BUILDIMAGES
-  tags: ["arch:arm64"]
+  tags: ["nodeless-arch:arm64"]
   needs:
     - kmt_setup_env_sysprobe_arm64
     - upload_dependencies_sysprobe_arm64
