--- a/.gitlab/source_test/golang_deps_diff.yml
+++ b/.gitlab/source_test/golang_deps_diff.yml
@@ -4,7 +4,7 @@
 golang_deps_diff:
   stage: source_test
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules: # this should only run on dev branches
     - !reference [ .except_main_or_release_branch ]
     - when: on_success
@@ -25,7 +25,7 @@ golang_deps_diff:
 golang_deps_commenter:
   stage: source_test
   image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/pr-commenter:2
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules: # this should only run on dev branches
     - !reference [.except_main_or_release_branch]
     - !reference [.except_deploy]
@@ -56,7 +56,7 @@ golang_deps_commenter:
 golang_deps_send_count_metrics:
   stage: source_test
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
+  tags: ["nodeless-arch:amd64"]
   rules:
     - when: on_success
   needs: ["go_deps"]
