--- a/.gitlab/pkg_metrics/pkg_metrics.yml
+++ b/.gitlab/pkg_metrics/pkg_metrics.yml
@@ -85,9 +85,7 @@ check_pkg_size:
     - if: $CI_COMMIT_BRANCH == "main"
       when: on_success
       allow_failure: true
-    - if: $CI_COMMIT_BRANCH =~ /^[0-9]+\.[0-9]+\.x$/
-      when: on_success
-      allow_failure: true
+    - !reference [.not_on_release_branch]
     - !reference [.except_mergequeue]
     - when: on_success
   needs:
