--- a/.ddqa/config.toml
+++ b/.ddqa/config.toml
@@ -10,6 +10,22 @@ github_team = "agent-metrics-logs"
 github_labels = ["team/agent-metrics-logs"]
 exclude_members = ["olivielpeau"]
 
+[teams."Agent Logs"]
+jira_project = "AGNTLOG"
+jira_issue_type = "Task"
+jira_statuses = ["To Do", "In Progress", "Done"]
+github_team = "agent-logs"
+github_labels = ["team/agent-logs"]
+exclude_members = [""]
+
+[teams."Agent Metrics"]
+jira_project = "AGTMETRICS"
+jira_issue_type = "Task"
+jira_statuses = ["To Do", "In Progress", "Done"]
+github_team = "agent-metrics"
+github_labels = ["team/agent-metrics"]
+exclude_members = [""]
+
 [teams."Agent Processing and Routing"]
 jira_project = "APR"
 jira_issue_type = "Task"
