--- a/tasks/libs/pipeline/github_jira_map.yaml
+++ b/tasks/libs/pipeline/github_jira_map.yaml
@@ -13,6 +13,8 @@
 '@datadog/ndm-integrations': NDINT
 '@datadog/container-intake': CTK
 '@datadog/agent-metrics-logs': AMLII
+'@datadog/agent-metrics': AGTMETRICS
+'@datadog/agent-logs': AGNTLOG
 '@datadog/agent-shared-components': ASCII
 '@datadog/container-app': CAP
 '@datadog/metrics-aggregation': AGGR
