--- a/tasks/libs/pipeline/github_slack_map.yaml
+++ b/tasks/libs/pipeline/github_slack_map.yaml
@@ -15,6 +15,8 @@
 '@datadog/ndm-integrations': '#ndm-integrations'
 '@datadog/container-intake': '#process-agent-ops'
 '@datadog/agent-metrics-logs': '#agent-metrics-logs'
+'@datadog/agent-metrics': '#agent-metrics'
+'@datadog/agent-logs': '#agent-logs'
 '@datadog/agent-processing-and-routing': '#agent-processing-and-routing'
 '@datadog/agent-shared-components': '#agent-shared-components-ops'
 '@datadog/container-app': '#container-app'
