fix(installer): Enforce that conflicting installer units stops before the order starts

--- a/pkg/fleet/installer/packages/embedded/datadog-installer-exp.service
+++ b/pkg/fleet/installer/packages/embedded/datadog-installer-exp.service
@@ -10,6 +10,7 @@ Type=oneshot
 PIDFile=/opt/datadog-packages/run/installer-exp.pid
 ExecStart=/opt/datadog-packages/datadog-installer/experiment/bin/installer/installer run -p /opt/datadog-packages/run/installer-exp.pid
 ExecStart=/bin/false
+ExecStop=/usr/bin/tail --pid $MAINPID -f /dev/null
 ExecStop=/bin/false
 
 [Install]
